[tool:pytest]
addopts = -q -n3 --strict --force-flaky --no-flaky-report -rfeX --failed-first
python_classes = *Test
markers =
    expensive: too slow to run during "make smoke"

# How come these warnings are suppressed successfully here, but not in conftest.py??
filterwarnings =
    ignore:dns.hash module will be removed:DeprecationWarning
    ignore:Using or importing the ABCs:DeprecationWarning

# xfail tests that pass should fail the test suite
xfail_strict=true

[pep8]
# E265 block comment should start with '# '
# E266 too many leading '#' for block comment
# E301 expected 1 blank line, found 0
# E401 multiple imports on one line
# The rest are the default ignored warnings.
ignore = E265,E266,E123,E133,E226,E241,E242,E301,E401
max-line-length = 100

[metadata]
license_file = LICENSE.txt
