# Licensed under the Apache License: http://www.apache.org/licenses/LICENSE-2.0
# For details: https://github.com/nedbat/coveragepy/blob/master/NOTICE.txt

[tool:pytest]
addopts = -q -n3 --strict-markers --force-flaky --no-flaky-report -rfeX --failed-first
python_classes = *Test
markers =
    expensive: too slow to run during "make smoke"

# How come these warnings are suppressed successfully here, but not in conftest.py??
filterwarnings =
    ignore:dns.hash module will be removed:DeprecationWarning
    ignore:Using or importing the ABCs:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning

# xfail tests that pass should fail the test suite
xfail_strict=true

[pep8]
# E265 block comment should start with '# '
# E266 too many leading '#' for block comment
# E301 expected 1 blank line, found 0
# E401 multiple imports on one line
# The rest are the default ignored warnings.
ignore = E265,E266,E123,E133,E226,E241,E242,E301,E401
max-line-length = 100

[metadata]
license_files = LICENSE.txt
